test/cases/compile_errors/invalid_underscore_placement_in_float_literal-4.zig
fn main() void {
    var bad: f128 = 1.0e_1;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:25: error: expected digit before digit separator
